--- a/index.html
+++ b/index.html
@@ -1,156 +1,125 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>dev.finance$</title>
 
-        <link rel="stylesheet" href="./style.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <header>
-            <img src="./assets/logo.svg" alt="Logo Dev Finance">
-        </header>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>dev.finance$</title>
 
-        <main class="container">
-            <section id="balance">
-                <h2 class="sr-only">Balanço</h2>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
 
-                <div class="card">
-                    <h3>
-                        <span>
-                            Entradas
-                        </span>
-                        <img src="./assets/income.svg" alt="Image de entradas">
-                    </h3>
-                    <p id="incomeDisplay">R$ 0,00</p>
-                </div>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-firestore.js"></script>
 
-                <div class="card">
-                    <h3>
-                        <span>
-                            Saídas
-                        </span>
-                        <img src="./assets/expense.svg" alt="Image de saídas">
-                    </h3>
-                    <p id="expenseDisplay">R$ 0,00</p>
-                </div>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap"
+        rel="stylesheet">
+</head>
 
-                <div class="card total">
-                    <h3>
-                        <span>
-                            Total
-                        </span>
-                        <img src="./assets/total.svg" alt="Image de total">
-                    </h3>
-                    <p id="totalDisplay">R$ 0,00</p>
-                </div>
-                
-            </section>
+<body>
+    <header>
+        <img src="./assets/logo.svg" alt="Logo Dev Finance">
+    </header>
 
-            <section id="transaction">
-                <h2 class="sr-only">Transações</h2>
+    <main class="container">
+        <section id="balance">
+            <h2 class="sr-only">Balanço</h2>
 
-                <a href="#" 
-                onclick="Modal.open()"
-                class="button new">+ Nova Transação</a>
-                
-                <table id="data-table">
-                    <thead>
-                        <tr>
-                            <th>Descrição</th>
-                            <th>Valor</th>
-                            <th>Data</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </section>
-        </main>
+            <div class="card">
+                <h3>
+                    <span>
+                        Entradas
+                    </span>
+                    <img src="./assets/income.svg" alt="Image de entradas">
+                </h3>
+                <p id="incomeDisplay">R$ 0,00</p>
+            </div>
 
-        <div class="modal-overlay">
-            <div class="modal">
-                <div id="form">
-                    <h2>Nova Transação</h2>
-                    <form action="" onsubmit="Form.submit(event)">
-                        <div class="input-group">
-                            <label 
-                                class="sr-only" 
-                                for="description">Descrição</label>
-                            <input 
-                                type="text" 
-                                id="description" 
-                                name="description"
-                                placeholder="Descrição"
-                            />
-                        </div>
+            <div class="card">
+                <h3>
+                    <span>
+                        Saídas
+                    </span>
+                    <img src="./assets/expense.svg" alt="Image de saídas">
+                </h3>
+                <p id="expenseDisplay">R$ 0,00</p>
+            </div>
 
-                        <div class="input-group">
-                            <label 
-                                class="sr-only" 
-                                for="amount">Valor</label>
-                            <input 
-                                type="number"
-                                step="0.01"
-                                id="amount" 
-                                name="amount"
-                                placeholder="0,00"
-                            />
-                            <small class="help">Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais</small>
-                        </div>
+            <div class="card total">
+                <h3>
+                    <span>
+                        Total
+                    </span>
+                    <img src="./assets/total.svg" alt="Image de total">
+                </h3>
+                <p id="totalDisplay">R$ 0,00</p>
+            </div>
 
-                        <div class="input-group">
-                            <label 
-                                class="sr-only" 
-                                for="date">Data</label>
-                            <input 
-                                type="date" 
-                                id="date" 
-                                name="date"
-                            />
-                        </div>
+        </section>
 
-                        <div class="input-group actions">
-                            <a 
-                            onclick="Modal.close()"
-                            href="#" 
-                            class="button cancel">Cancelar</a>
-                            <button>Salvar</button>
-                        </div>
-                    </form>
-                </div>
+        <section id="transaction">
+            <h2 class="sr-only">Transações</h2>
+
+            <a href="#" onclick="Modal.open()" class="button new">+ Nova Transação</a>
+
+            <table id="data-table">
+                <thead>
+                    <tr>
+                        <th>Descrição</th>
+                        <th>Valor</th>
+                        <th>Data</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </section>
+    </main>
+
+    <div class="modal-overlay">
+        <div class="modal">
+            <div id="form">
+                <h2>Nova Transação</h2>
+                <form action="" onsubmit="Form.submit(event)">
+                    <div class="input-group">
+                        <label class="sr-only" for="description">Descrição</label>
+                        <input type="text" id="description" name="description" placeholder="Descrição" />
+                    </div>
+
+                    <div class="input-group">
+                        <label class="sr-only" for="amount">Valor</label>
+                        <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00" />
+                        <small class="help">Use o sinal - (negativo) para despesas e , (vírgula) para casas
+                            decimais</small>
+                    </div>
+
+                    <div class="input-group">
+                        <label class="sr-only" for="date">Data</label>
+                        <input type="date" id="date" name="date" />
+                    </div>
+
+                    <div class="input-group actions">
+                        <a onclick="Modal.close()" href="#" class="button cancel">Cancelar</a>
+                        <button>Salvar</button>
+                    </div>
+                </form>
             </div>
         </div>
+    </div>
 
-        <footer><p>dev.finance$</p></footer>
+    <footer>
+        <p>dev.finance$</p>
+    </footer>
+    <script src="./scripts.js"></script>
+    <script src="js/index.js"></script>
 
-        <script src="./scripts.js"></script>
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
+</body>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-analytics.js"></script>
-
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyDLIQaxvJzFkQprpSzK50dLyj3PTWKoHT8",
-    authDomain: "projeto-finance.firebaseapp.com",
-    projectId: "projeto-finance",
-    storageBucket: "projeto-finance.appspot.com",
-    messagingSenderId: "739464442513",
-    appId: "1:739464442513:web:004e717889899157668530",
-    measurementId: "G-CNDYQXKBXZ"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-</script>
-    </body>
 </html>
