adicionando dados ao firestore separadamente

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                     <tr>
                         <th>Descrição</th>
                         <th>Valor</th>
-                        <th>Data</th>
+                        <!-- <th>Data</th> -->
+                        <!-- Implementada gravação automática de data-->
                         <th></th>
                     </tr>
                 </thead>
@@ -100,10 +101,10 @@
                             decimais</small>
                     </div>
 
-                    <div class="input-group">
+                    <!-- <div class="input-group">
                         <label class="sr-only" for="date">Data</label>
                         <input type="date" id="date" name="date" />
-                    </div>
+                    </div> -->
 
                     <div class="input-group actions">
                         <a onclick="Modal.close()" href="#" class="button cancel">Cancelar</a>
