--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
                         <th>Descrição</th>
                         <th>Valor</th>
                         <th>Data</th>
+                        <!--TODO: Apenas opções: HOJE para despesas do dia atual, ONTEM e Outros para dastas específicas-->
                         <th></th>
                     </tr>
                 </thead>
